# agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  lint.yml  tests.yml
agent/: __init__.py  attachment_ingest.py  config.py  core.py  core_services.py  embeddings.py  events.py  export_delivery.py  intent_router.py  loop.py  loop_services.py  main.py  metrics.py  project_memory.py  run_guard.py  runtime_config.py  secret_store.py  session_router.py  skill_loader.py  subagent_runner.py  task_router.py  task_waits.py  tool_catalog.py
agent/communication/: discord_bot.py  discord_commands.py  discord_config.py  discord_constants.py  discord_presenter.py  discord_services.py  discord_session.py  message_router.py
agent/control_plane/: __init__.py  app.py
agent/identity/: GOALS.md  IDENTITY.md  MEMORY.md
agent/memory/: learning_service.py  postgres_components.py  postgres_query.py  postgres_store.py  reliability_eval.py  sqlite_components.py  sqlite_store.py
agent/migrations/: __init__.py  runner.py
agent/permissions/: __init__.py  engine.py  models.py
agent/skills/: communicate.md  discord-analyst-replies.md  event-hold-analysis.md  event-spec-analysis.md  events-schema-reference.md  price-history-analysis.md  query-database.md  reflect.md  sale-day-focus.md  self-update.md  use-browser.md  use-github.md  web-research.md  write-code.md
agent/tools/: discord_tools.py  filesystem.py  github.py  http_client.py  registry.py  self_edit.py  shell.py  toolsets.py  (+3 more)
docs/: api.md  architecture.md
scripts/: docker-entrypoint.sh  install.sh  postgres-init.sql  update-agent.sh
tests/: conftest.py  test_attachment_ingest.py  test_config.py  test_control_plane.py  test_core.py  test_core_services.py  test_discord_bot.py  test_discord_config.py  test_discord_dm.py  test_discord_message_split.py  test_discord_modules.py  test_discord_presenter.py  test_discord_services.py  test_discord_tools.py  test_embeddings.py  test_events.py  test_export_delivery.py  test_filesystem_patch_extra.py  test_filesystem_tools.py  test_github_tools.py  test_intent_router.py  test_intent_router_integration.py  test_learning_service.py  test_loop.py  test_loop_reload.py  test_loop_runtime.py  test_loop_services.py  test_main.py  test_mcp_bridge.py  test_message_router.py  test_metrics.py  test_permissions_engine.py  test_postgres_components.py  test_postgres_query.py  test_postgres_store.py  test_postgres_store_query.py  test_project_memory.py  test_registry.py  test_reliability_memory.py  test_run_guard.py  (+15 more)
workspace/: .gitkeep
(+3 files in other folders)
